@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Sat Aug 06 15:24:15 CEST 2005
+ * Sun Aug 07 01:31:17 CEST 2005
  *
  *****************************************************************************/
 
@@ -282,7 +282,8 @@ namespace Mono.Cecil.Binary {
 			hnt.RuntimeLibrary = Encoding.ASCII.GetString (m_binaryReader.ReadBytes (11));
 			m_binaryReader.ReadByte ();
 
-			// ep + rva
+			hnt.EntryPoint = m_binaryReader.ReadUInt16 ();
+			hnt.RVA = new RVA (m_binaryReader.ReadUInt32 ());
 		}
 	}
 }
